--- a/style.css
+++ b/style.css
@@ -3,13 +3,19 @@ html {
 }
 
 body {
-  background-color: #302e2e;
-  font-family: Montserrat;
+  background-image: url(/images/background.png);
+  font-family: inter;
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: white;
+  color: #841e2d;
   text-align: center;
+  width: 100%;
+}
+
+@font-face {
+  font-family: IFC Hardball;
+  src: url(/fonte/i_f_c_hardball/I.F.C.\ HARDBALL.ttf);
 }
 
 .body {
@@ -26,15 +32,20 @@ body {
 }
 
 h1 {
+  color: #f0f0f0;
   font-size: 1.4rem;
   font-weight: 800;
   text-align: center;
+  align-items: center;
 }
 
 h2 {
-  font-size: 3.2rem;
-  font-weight: 900;
+  font-size: 3rem;
+  font-weight: 800;
   text-align: center;
+  color: #363434;
+  font-family: 'Rowdies';
+  margin-bottom: 45px;
 }
 
 .introduction h2 {
@@ -42,30 +53,38 @@ h2 {
 }
 
 p {
+  font-family: Montserrat;
   font-size: 1.2rem;
-  font-weight: 700;
+  font-weight: 500;
   margin-top: 25px;
   margin-bottom: 20px;
 }
 
 span {
-  color: #009e28;
+  font-family: 'Rowdies';
+  color: #841e2d;
   font-weight: 800;
+}
+
+.maisCresce {
+  color: #7a0315;
 }
 
 button {
   padding: 20px 36px;
-  background-color: #14D63E;
+  background-color: #b91b33;
   border-radius: 8px;
   color: white;
   font-size: 2rem;
+  font-family: 'Inter';
   font-weight: 800;
-  box-shadow: 0 0 0 0 rgba(#5a99d4, .5);
+  border: none;
+  box-shadow: 0 0 0 0 rgba(#d45a5a, .5);
   -webkit-animation: pulse 1.5s infinite;
 }
 
 button:hover {
-  background-color: #00a724;
+  background-color: #8a1728;
   cursor: pointer;
   -webkit-animation: none;
   animation: none;
@@ -86,7 +105,7 @@ button:hover {
 }
 
 img {
-  padding: 30px;
+  padding: 0px;
 }
 
 .introductionVideo {
@@ -131,35 +150,122 @@ section {
 }
 
 section.header {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
   margin-top: 0;
-  background-color: #bf1a04;
-  padding: 25px 0;
+  background-color: #841e2d;
+  padding: 20px 0;
   position: fixed;
   z-index: 999;
 }
+
+section.header img{
+  position: absolute;
+  left: 30px;
+  height: 40px;
+  width: 45px;
+  color: #f0f0f0;
+}
+
+img.logoMobile {
+ display: none;
+} 
 
 section.introduction {
   margin-top: 35px;
   display: flex;
   flex-direction: column;
   word-spacing: 2px;
+  line-height: 4rem;
 }
 
-section.howItWorks p {
+section.howItWorks ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
   font-size: 1.8rem;
   margin-bottom: 50px;
   font-weight: 500;
 }
 
-section.price button {
+section.howItWorks li {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+img.local {
+  width: 100px;
+  height: 100px;
+}
+
+section.howItWorks span {
+  font-weight: 700;
+}
+
+section.howItWorks p {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.6rem;
+  margin-top: 7px;
+  margin-bottom: 25px;
+  color: #363434;
+}
+
+#obs {
+  font-weight: 700;
+  color: #841e2d;
+  text-transform: uppercase;
+}
+
+section.quemSomos p{
+  font-size: 1.4rem;
+  text-align: justify;
+  text-indent:1.5rem ;
+}
+
+#hashtag {
+  font-weight: 700;
+  font-size: 1.8rem;
+}
+
+section.contact button {
   margin-top: 35px;
 }
 
-section.price #value{
-  color: #BF0404;
-  font-size: 4.0rem;
-  font-weight: 900;
-  text-decoration: line-through;
+section.contact h2{
+  color: #363434;
+}
+
+section.contact img {
+  width: 50px;
+  height: 50px;
+}
+
+.contactContainer {
+  display: flex;
+  gap: 60px;
+  margin-top: 20px;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 100px);
+  grid-template-rows: repeat(3, 6vw);
+  grid-gap: 15px;
+}
+
+.gallery__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+div.whatsapp {
+  display: flex;
+  flex-direction: column;
 }
 
 .testimonialsGrid {
@@ -169,26 +275,6 @@ section.price #value{
   grid-gap: 30px;
   margin-bottom: 30px;
   margin-top: 35px;
-}
-
-section.price #sale {
-  color: #00a724;
-  font-size: 4.0rem;
-}
-
-section.assurance span {
-  background-color: #565151;
-  padding: 8px 14px;
-  color: white;
-  border-radius: 4px;
-}
-
-section.assurance strong {
-  color: #00D1FF;
-}
-
-section.assurance img {
-  width: 30%;
 }
 
 section.query span {
@@ -213,6 +299,7 @@ section.footer p {
     font-size: 1rem;
     font-weight: 100;
     margin-bottom: 10px;
+    color: #2c2a2a;
 }
 
 @media (max-width: 768px) {
@@ -221,11 +308,17 @@ section.footer p {
     flex-direction: column;
     gap: 30px;
   }
+
   h2 {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
+    margin-bottom: 20px;
   }
 
   h1 {
+    font-size: 1rem;
+  }
+
+  p {
     font-size: 1rem;
   }
 
@@ -237,6 +330,21 @@ section.footer p {
   img {
     width: 70%;
   }
+
+  .mobileHiden {
+    display: none;
+  }
+
+  section.header img{
+    display: none;
+  }
+
+  img.logoMobile {
+    display: flex;
+    width: 150px;
+    height: 100px;
+    margin-bottom: 30px;
+  } 
 
   .testimonialsGrid {
     width: 90%;
@@ -250,10 +358,26 @@ section.footer p {
   }
 
   section.howItWorks p {
-    font-size: 1.6rem;
+    font-size: 1.2rem;
   }
 
-  section.assurance img {
-    width: 80%;
+  #obs {
+      font-size: 1.2rem;
+    }
+
+  section.introduction {
+    margin-top: 15px;
+    line-height: 1.8rem;
+  }
+
+  .contact {
+    margin-bottom: 60px;
+  }
+
+  .contactContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-top: 10px;
   }
 }
