--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  background-image: url(/images/background.png);
+  background-image: url(./images/background.jpg);
   font-family: inter;
   display: flex;
   flex-direction: column;
@@ -70,12 +70,16 @@ span {
   color: #7a0315;
 }
 
+a {
+  text-decoration: none;
+}
+
 button {
-  padding: 20px 36px;
-  background-color: #b91b33;
+  padding: 26px 65px;
+  background-color: #23b110;
   border-radius: 8px;
   color: white;
-  font-size: 2rem;
+  font-size: 2.4rem;
   font-family: 'Inter';
   font-weight: 800;
   border: none;
@@ -180,6 +184,22 @@ section.introduction {
   line-height: 4rem;
 }
 
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+input {
+  font-family: 'inter';
+  font-size: 1.4rem;
+  border-radius: 8px;
+  height: 50px;
+  width: 500px;
+  padding: 0 10px;
+  border-color: #841e2d;
+}
+
 section.howItWorks ul {
   display: flex;
   flex-direction: column;
@@ -207,6 +227,7 @@ section.howItWorks span {
 
 section.howItWorks p {
   display: flex;
+  line-height: 1.5rem;
   flex-direction: column;
   font-size: 1.6rem;
   margin-top: 7px;
@@ -221,9 +242,10 @@ section.howItWorks p {
 }
 
 section.quemSomos p{
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   text-align: justify;
-  text-indent:1.5rem ;
+  text-indent:1.3rem ;
+  line-height: 1.8rem;
 }
 
 #hashtag {
@@ -240,8 +262,8 @@ section.contact h2{
 }
 
 section.contact img {
-  width: 50px;
-  height: 50px;
+  width: 150px;
+  height: 150px;
 }
 
 .contactContainer {
@@ -252,20 +274,35 @@ section.contact img {
 
 .gallery {
   display: grid;
-  grid-template-columns: repeat(3, 100px);
-  grid-template-rows: repeat(3, 6vw);
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   grid-gap: 15px;
 }
 
-.gallery__img {
+.galleryitem {
   width: 100%;
   height: 100%;
-  object-fit: cover;
 }
 
 div.whatsapp {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+}
+
+div.whatsapp img {
+  width: 100px;
+  height: 100px;
+}
+
+p.instagram {
+  color: #841e2d;
+  font-size: 1.4rem;
+}
+
+.iconContact {
+  display: flex;
+  justify-content: center;
 }
 
 .testimonialsGrid {
@@ -346,6 +383,16 @@ section.footer p {
     margin-bottom: 30px;
   } 
 
+  input {
+    font-family: 'inter';
+    font-size: 1.2rem;
+    border-radius: 8px;
+    height: 50px;
+    width: 300px;
+    padding: 0 10px;
+    border-color: #841e2d;
+  }
+
   .testimonialsGrid {
     width: 90%;
     display: flex;
@@ -361,9 +408,10 @@ section.footer p {
     font-size: 1.2rem;
   }
 
-  #obs {
-      font-size: 1.2rem;
-    }
+  span.questions {
+    font-weight: 700;
+    font-size: 1.4rem;
+  }
 
   section.introduction {
     margin-top: 15px;
@@ -379,5 +427,14 @@ section.footer p {
     flex-direction: column;
     gap: 40px;
     margin-top: 10px;
+  }
+
+
+  .gallery {
+    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 15px;
   }
 }
