--- a/style.css
+++ b/style.css
@@ -33,10 +33,11 @@ body {
 
 h1 {
   color: #f0f0f0;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-weight: 800;
   text-align: center;
   align-items: center;
+  line-height: 1.8rem;
 }
 
 h2 {
@@ -351,9 +352,6 @@ section.footer p {
     margin-bottom: 20px;
   }
 
-  h1 {
-    font-size: 1rem;
-  }
 
   p {
     font-size: 1rem;
@@ -414,7 +412,7 @@ section.footer p {
   }
 
   section.introduction {
-    margin-top: 15px;
+    margin-top: 30px;
     line-height: 1.8rem;
   }
 
