--- a/style.css
+++ b/style.css
@@ -137,6 +137,12 @@ iframe {
   height: 100%;
 }
 
+iframe#map-canvas {
+  position: relative;
+  width: 100%;
+  height: 250px;
+}
+
 video {
   width: 95%;
   max-width: 807px;
@@ -218,8 +224,8 @@ section.howItWorks li {
 }
 
 img.local {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
 }
 
 section.howItWorks span {
